# FastApi_Notes

./: .env_example  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yaml  docker_compose.yaml  main.py  pyproject.toml
app/: __init__.py  config.py  database.py  main.py
app/core/: __init__.py  settings.py
app/database/: __init__.py  database.py
app/database/migrations/: env.py
app/database/migrations/versions/: 0fcb8e342f8b_create_table.py  779bba298d17_create.py  a435336623ae_create_table.py  d1363a6439c5_added_initial_table.py
app/dto/: note.py
app/models/: note.py  user.py
app/notes/: __init__.py  models.py  routers.py  services.py
app/routers/: note.py  user.py
app/services/: note.py  user.py
app/users/: __init__.py  models.py  routers.py  services.py
docker_compose/: app.yaml
migrations/: env.py
migrations/versions/: 1522c87a8889_first.py
models/: note.py  user.py
routers/: note.py  user.py
services/: note.py  user.py
src/: __init__.py
src/app/: main.py
src/app/core/: __init__.py  settings.py
src/app/database/: __init__.py  database.py
src/app/database/migrations/: env.py
src/app/notes/: __init__.py  models.py  routers.py  schemas.py  services.py
src/app/users/: __init__.py  models.py  routers.py  services.py
tests/: test_main.py  test_notes.py  test_users.py
