[tool.poetry]
name = "fast_api_notes"
version = "0.1.0"
description = ""
authors = ["Ilya"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["all"], version = "^2.0.25"}
psycopg = "^3.1.17"
fastapi = {extras = ["all"], version = "^0.109.0"}
alembic = "^1.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
